Format update print all message